# Generated by Django 3.2.16 on 2022-10-15 16:26

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion
import uuid


class Migration(migrations.Migration):

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('talks', '0002_topic'),
    ]

    operations = [
        migrations.CreateModel(
            name='Speaker',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('contact_email', models.EmailField(max_length=254, verbose_name='contact_email')),
                ('city', models.CharField(max_length=255, verbose_name='city')),
                ('webpage', models.URLField(blank=True, null=True, verbose_name='webpage')),
                ('social_networks', models.JSONField(blank=True, default=dict, verbose_name='social_networks')),
                ('user', models.OneToOneField(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='speaker', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'verbose_name': 'speaker',
                'verbose_name_plural': 'speakers',
            },
        ),
    ]
